# oop2

./: 4373_Музыченко_Андреева_№2 (1).docx  4373_Музыченко_Андреева_№2.docx  CMakeLists.txt  application.cpp  array.cpp  complex.cpp  main.cpp  polynom.cpp
headers/: application.h  array.h  complex.h  number.h  polynom.h
